[fix bug 1332654] Fix CSS linting errors for Home page, /internet-health, /technology

--- a/media/css/mozorg/home/home-voices-ie8.less
+++ b/media/css/mozorg/home/home-voices-ie8.less
@@ -27,11 +27,11 @@
     width: @widthSquareGrid_6;
     left: 0;
     margin-left: @baseLine;
-    background: url(/media/img/home/voices/mosaic-background.jpg) -10px 0 repeat;
+    background: url('/media/img/home/voices/mosaic-background.jpg') -10px 0 repeat;
 }
 
 .promo-face .face {
-    background-image: url(/media/img/home/voices/faces-color-sprite.jpg);
+    background-image: url('/media/img/home/voices/faces-color-sprite.jpg');
 }
 
 .html-rtl {
@@ -49,7 +49,7 @@
         text-indent: 0;
         content: '';
         border: none;
-        background-image: url(/media/img/home/voices/promos/go-sprite.png);
+        background-image: url('/media/img/home/voices/promos/go-sprite.png');
         background-position: 0 0;
         background-repeat: no-repeat;
     }
@@ -90,7 +90,7 @@
         font-family: inherit;
         content: '';
         border: none;
-        background-image: url(/media/img/home/voices/promos/go-sprite.png);
+        background-image: url('/media/img/home/voices/promos/go-sprite.png');
         background-position: 0 -84px;
         background-repeat: no-repeat;
     }
@@ -115,7 +115,7 @@
         height: 40px;
         border: none;
         text-indent: 0;
-        background-image: url(/media/img/home/voices/promos/social/twt-sprite.png);
+        background-image: url('/media/img/home/voices/promos/social/twt-sprite.png');
         background-position: 0 0;
         background-repeat: no-repeat;
 
@@ -128,7 +128,7 @@
 
     .twt-reply {
         top: 50px;
-        background-image: url(/media/img/home/voices/promos/social/twt-sprite.png);
+        background-image: url('/media/img/home/voices/promos/social/twt-sprite.png');
         background-position: 0 -42px;
         background-repeat: no-repeat;
 
@@ -140,7 +140,7 @@
 
     .twt-rt {
         top: 80px;
-        background-image: url(/media/img/home/voices/promos/social/twt-sprite.png);
+        background-image: url('/media/img/home/voices/promos/social/twt-sprite.png');
         background-position: 0 -74px;
         background-repeat: no-repeat;
 
@@ -175,7 +175,7 @@
     &:before {
         top: 10px;
         font-family: inherit;
-        background: url(/media/img/home/voices/community-icon-sprite.png) no-repeat 0 0;
+        background: url('/media/img/home/voices/community-icon-sprite.png') no-repeat 0 0;
     }
 
     &.organizations:before {
