--- a/media/css/mozorg/home/home-voices-promo.less
+++ b/media/css/mozorg/home/home-voices-promo.less
@@ -6,7 +6,7 @@
 @import "home-voices-grid.less";
 
 @font-face {
-    font-family: 'FA-Icons-Home';
+    font-family: FA-Icons-Home;
     src: url('/media/fonts/icons-home.woff?12-2014') format('woff');
     font-weight: normal;
     font-style: normal;
@@ -95,7 +95,7 @@
 
     #promo-8 {
         top: 640px;
-        left: 0px;
+        left: 0;
     }
 
     #promo-9 {
@@ -232,7 +232,7 @@
             width: 38px;
             height: 38px;
             margin-left: -20px;
-            font-family: 'FA-Icons-Home';
+            font-family: FA-Icons-Home;
             .font-size(34px);
             text-indent: 2px;
             content: '\f101';
@@ -474,7 +474,7 @@ html[lang|="en"] {
             width: 38px;
             height: 38px;
             margin-left: -20px;
-            font-family: 'FA-Icons-Home';
+            font-family: FA-Icons-Home;
             .font-size(30px);
             content: '\f103';
             border: 2px solid #fff;
@@ -759,7 +759,7 @@ html[lang|="en"] {
 // Advocacy
 .promo-small-landscape.advocacy {
     background-color: #b7bad6; // lavender
-    background-image: url(/media/img/home/voices/promos/advocacy/advocacy-logo.png);
+    background-image: url('/media/img/home/voices/promos/advocacy/advocacy-logo.png');
     background-position: 15px 20px;
     background-repeat: no-repeat;
     .background-size(100px, 100px);
@@ -780,7 +780,7 @@ html[lang|="en"] {
 /****************************************************************************/
 // Volunteer
 .promo-small-landscape.volunteer {
-    background: #0ad url(/media/img/home/voices/promos/volunteer/volunteer.png) 15px 25px no-repeat;
+    background: #0ad url('/media/img/home/voices/promos/volunteer/volunteer.png') 15px 25px no-repeat;
     .background-size(100px, 86px);
 
     h2 {
@@ -805,7 +805,7 @@ html[lang|="en"] {
     h2 {
         padding: 30px 20px 10px 140px;
         min-height: 64px;
-        background: url(/media/img/home/voices/promos/webmaker/webmaker-teacher.svg) 15px 35px no-repeat;
+        background: url('/media/img/home/voices/promos/webmaker/webmaker-teacher.svg') 15px 35px no-repeat;
         .background-size(95px, 64px);
     }
 }
@@ -820,7 +820,7 @@ html[lang|="en"] {
     h2 {
         padding: 100px @baseLine 0 @baseLine;
         margin-top: @baseLine * 2;
-        background-image: url(/media/img/home/voices/promos/sumo/sumo.png);
+        background-image: url('/media/img/home/voices/promos/sumo/sumo.png');
         background-position: top center;
         background-repeat: no-repeat;
         .background-size(94px, 94px);
@@ -872,7 +872,7 @@ html[lang|="en"] {
     h2 {
         padding: 100px @baseLine 0 @baseLine;
         margin-top: 25px;
-        background-image: url(/media/img/home/voices/promos/encryption/encryption.svg);
+        background-image: url('/media/img/home/voices/promos/encryption/encryption.svg');
         background-position: top center;
         background-repeat: no-repeat;
         .background-size(110px, 77px);
@@ -898,7 +898,7 @@ html[lang|="en"] {
     h2 {
         padding: 110px @baseLine 0 @baseLine;
         margin-top: @baseLine * 2;
-        background-image: url(/media/img/home/voices/promos/firefox/firefox-logo.png);
+        background-image: url('/media/img/home/voices/promos/firefox/firefox-logo.png');
         background-position: top center;
         background-repeat: no-repeat;
         .background-size(101px, 98px);
@@ -921,7 +921,7 @@ html[lang|="en"] {
 
     h2 {
         padding-top: 145px;
-        background: url(/media/img/home/voices/promos/mdn10/logo-mdn10.svg) center 40px no-repeat;
+        background: url('/media/img/home/voices/promos/mdn10/logo-mdn10.svg') center 40px no-repeat;
     }
 }
 
@@ -952,7 +952,7 @@ html[lang|="en"] {
 
     h2 {
         padding-top: 180px;
-        background: url(/media/img/home/voices/promos/ios/icon-ios.svg) center 50px no-repeat;
+        background: url('/media/img/home/voices/promos/ios/icon-ios.svg') center 50px no-repeat;
     }
 
     p.more {
@@ -976,7 +976,7 @@ html[lang|="en"] {
 
     h2 {
         padding-top: 155px;
-        background: url(/media/img/home/voices/promos/firefoxdev/firefoxdev.png) center 35px no-repeat;
+        background: url('/media/img/home/voices/promos/firefoxdev/firefoxdev.png') center 35px no-repeat;
     }
 }
 
@@ -988,7 +988,7 @@ html[lang|="en"] {
 
     h2 {
         padding-top: 155px;
-        background: url(/media/img/home/voices/promos/private-browsing/private-browsing.svg) center 45px no-repeat;
+        background: url('/media/img/home/voices/promos/private-browsing/private-browsing.svg') center 45px no-repeat;
     }
 
     h3 {
@@ -1004,7 +1004,7 @@ html[lang|="en"] {
 
     h2 {
         padding-top: 175px;
-        background: url(/media/img/home/voices/promos/accounts/firefox-sync.svg) center 25px no-repeat;
+        background: url('/media/img/home/voices/promos/accounts/firefox-sync.svg') center 25px no-repeat;
         .background-size(125px, 125px);
     }
 
@@ -1099,7 +1099,7 @@ html[lang|="en"] {
         .font-size(0);
 
         &:before {
-            font-family: 'FA-Icons-Home';
+            font-family: FA-Icons-Home;
             .font-size(27px);
             content: '\f099'; // twitter
             position: absolute;
@@ -1133,7 +1133,7 @@ html[lang|="en"] {
             left: 12px;
             width: 40px;
             height: 20px;
-            font-family: 'FA-Icons-Home';
+            font-family: FA-Icons-Home;
             .font-size(@baseFontSize);
             content: '\f112'; // reply
             color: #fff;
@@ -1165,7 +1165,7 @@ html[lang|="en"] {
             left: 12px;
             width: 40px;
             height: 20px;
-            font-family: 'FA-Icons-Home';
+            font-family: FA-Icons-Home;
             .font-size(@baseFontSize);
             content: '\f079'; // retweet
             color: #fff;
@@ -1311,7 +1311,7 @@ html[lang|="en"] {
 
         #promo-14 {
             top: 800px;
-            left: 0px;
+            left: 0;
         }
 
         #promo-15 {
@@ -1455,7 +1455,7 @@ html[lang|="en"] {
 
 @media only screen and (min-width: (@widthSquareGrid_4)) {
     .promo-face .face {
-        background-image: url(/media/img/home/voices/faces-color-sprite.jpg);
+        background-image: url('/media/img/home/voices/faces-color-sprite.jpg');
     }
 }
 
@@ -1662,19 +1662,19 @@ html[lang|="en"] {
 // Promo faces background grid should not be loaded at smallest viewport size
 @media only screen and (min-width: @widthSquareGrid_6) {
     .faces-grid-inner {
-        background: #fff url(/media/img/home/voices/mosaic-background.jpg) -10px 0 repeat;
+        background: #fff url('/media/img/home/voices/mosaic-background.jpg') -10px 0 repeat;
     }
 }
 
 @media only screen and (min-width: @widthSquareGrid_4) and (max-width: (@widthSquareGrid_6 - 1)) {
     .faces-grid-inner {
-        background: #fff url(/media/img/home/voices/mosaic-background-medium.jpg) -10px 0 repeat;
+        background: #fff url('/media/img/home/voices/mosaic-background-medium.jpg') -10px 0 repeat;
     }
 }
 
 @media only screen and (min-width: 340px) and (max-width: (@widthSquareGrid_4 - 1)) {
     .faces-grid-inner {
-        background: #fff url(/media/img/home/voices/mosaic-background-small.jpg) -10px 0 repeat;
+        background: #fff url('/media/img/home/voices/mosaic-background-small.jpg') -10px 0 repeat;
     }
 }
 
@@ -1694,27 +1694,27 @@ html[lang|="en"] {
     // Support
     .promo-large-landscape.support {
         h2 {
-            background-image: url(/media/img/home/voices/promos/sumo/sumo-high-res.png);
+            background-image: url('/media/img/home/voices/promos/sumo/sumo-high-res.png');
             .background-size(94px, 94px);
         }
     }
 
     // Advocacy
     .promo-small-landscape.advocacy {
-        background-image: url(/media/img/home/voices/promos/advocacy/advocacy-logo-high-res.png);
+        background-image: url('/media/img/home/voices/promos/advocacy/advocacy-logo-high-res.png');
         .background-size(100px, 100px);
     }
 
     // Volunteer
     .promo-small-landscape.volunteer {
-        background-image: url(/media/img/home/voices/promos/volunteer/volunteer-high-res.png);
+        background-image: url('/media/img/home/voices/promos/volunteer/volunteer-high-res.png');
         .background-size(100px, 86px);
     }
 
     // Firefox Desktop
     .promo-large-portrait.firefox-desktop {
         h2 {
-            background-image: url(/media/img/home/voices/promos/firefox/firefox-logo-high-res.png);
+            background-image: url('/media/img/home/voices/promos/firefox/firefox-logo-high-res.png');
             .background-size(101px, 98px);
         }
     }
@@ -1722,7 +1722,7 @@ html[lang|="en"] {
     // Firefox Developer Edition
     .promo-large-portrait.firefox-developer {
         h2 {
-            background-image: url(/media/img/home/voices/promos/firefoxdev/firefoxdev-high-res.png);
+            background-image: url('/media/img/home/voices/promos/firefoxdev/firefoxdev-high-res.png');
             .background-size(105px, 105px);
         }
     }
@@ -1730,7 +1730,7 @@ html[lang|="en"] {
     // Gear
     .promo-large-landscape.gear {
         h2 {
-            background-image: url(/media/img/home/voices/promos/gear/gear-high-res.png);
+            background-image: url('/media/img/home/voices/promos/gear/gear-high-res.png');
             .background-size(75px, 80px);
         }
     }
