--- a/media/css/mozorg/home/home-voices.less
+++ b/media/css/mozorg/home/home-voices.less
@@ -6,7 +6,7 @@
 @import "home-voices-grid.less";
 
 @font-face {
-    font-family: 'FA-Icons-Home';
+    font-family: FA-Icons-Home;
     src: url('/media/fonts/icons-home.woff?12-2014') format('woff');
     font-weight: normal;
     font-style: normal;
@@ -227,7 +227,7 @@ h1, h2, h3, h4, h5, h6 {
                     width: 52px;
                     height: 42px;
                     color: #dfa09d;
-                    font-family: 'FA-Icons-Home';
+                    font-family: FA-Icons-Home;
                 }
 
                 &.organizations:before {
@@ -350,7 +350,7 @@ h1, h2, h3, h4, h5, h6 {
 
     .event-info:before {
         display: inline-block;
-        font-family: 'FA-Icons-Home';
+        font-family: FA-Icons-Home;
         width: 1.5em;
         text-align: center;
         color: #b1b1ad;
@@ -596,7 +596,7 @@ h1, h2, h3, h4, h5, h6 {
             content: '';
             width: 100%;
             height: 84px;
-            background: url(/media/img/home/voices/secondary-icon-sprite-v2.png) no-repeat center top;
+            background: url('/media/img/home/voices/secondary-icon-sprite-v2.png') no-repeat center top;
         }
     }
 
@@ -676,7 +676,7 @@ h1, h2, h3, h4, h5, h6 {
     -webkit-appearance: none;
 
     &:before {
-        font-family: 'FA-Icons-Home';
+        font-family: FA-Icons-Home;
         content: '\f055\00a0'; // plus-circle space
     }
 }
