--- a/media/css/mozorg/internet-health.scss
+++ b/media/css/mozorg/internet-health.scss
@@ -489,7 +489,7 @@ html[dir="rtl"] #pillars > section {
     }
 
     .content {
-        background-image: url('/media/img/mozorg/internet-health/innovation.svg')
+        background-image: url('/media/img/mozorg/internet-health/innovation.svg');
     }
 
     .footer-hr:after {
@@ -515,7 +515,7 @@ html[dir="rtl"] #pillars > section {
     }
 
     .content {
-        background-image: url('/media/img/mozorg/internet-health/decentralization.svg')
+        background-image: url('/media/img/mozorg/internet-health/decentralization.svg');
     }
 
     .footer-hr:after {
@@ -542,7 +542,7 @@ html[dir="rtl"] #pillars > section {
     }
 
     .content {
-        background-image: url('/media/img/mozorg/internet-health/inclusion.svg')
+        background-image: url('/media/img/mozorg/internet-health/inclusion.svg');
     }
 
     .footer-hr:after {
@@ -569,7 +569,7 @@ html[dir="rtl"] #pillars > section {
     }
 
     .content {
-        background-image: url('/media/img/mozorg/internet-health/literacy.svg')
+        background-image: url('/media/img/mozorg/internet-health/literacy.svg');
     }
 
     .footer-hr:after {
