--- a/media/css/mozorg/namespaces.scss
+++ b/media/css/mozorg/namespaces.scss
@@ -12,16 +12,16 @@ body {
 h1 {
     font-size: 2em;
     line-height: 150%;
-    margin: 0em;
-    padding: 0em;
+    margin: 0;
+    padding: 0;
 }
 
 h2 {
     font-size: 1.5em;
     font-style: italic;
     line-height: 150%;
-    margin: 0em;
-    padding: 0em;
+    margin: 0;
+    padding: 0;
 }
 
 dt {
