[bug 1332672]  [CSS linting] /foundation directory

--- a/media/css/foundation/annual2011.less
+++ b/media/css/foundation/annual2011.less
@@ -63,7 +63,7 @@ a.vid-youtube:focus {
 
 #masthead {
   width: auto;
-  padding: 0px 20px 20px;
+  padding: 0 20px 20px;
   position: relative;
   margin-top: -10px;
 
@@ -122,19 +122,34 @@ a.vid-youtube:focus {
 }
 
 #page-nav, #page-nav.faq, #page-nav a { background: @mozred;  }
-#nav-welcome.current a, #nav-faq.current a { background: #fff; color: @mozred; }
+#nav-welcome.current a, #nav-faq.current a {
+  background: #fff;
+  color: @mozred;
+}
 
 #page-nav.mobilized, #page-nav.mobilized a { background: @blue; }
-#nav-mobilized.current a { background: #fff; color: @blue; }
+#nav-mobilized.current a {
+  background: #fff;
+  color: @blue;
+}
 
 #page-nav.action, #page-nav.action a { background: #000; }
-#nav-action.current a { background: #fff; color: #000; }
+#nav-action.current a {
+  background: #fff;
+  color: #000;
+}
 
 #page-nav.community, #page-nav.community a { background: @orange; }
-#nav-community.current a { background: #fff; color: @orange; }
+#nav-community.current a {
+  background: #fff;
+  color: @orange;
+}
 
 #page-nav.sustainability, #page-nav.sustainability a { background: @red; }
-#nav-sustainability.current a { background: #fff; color: @red; }
+#nav-sustainability.current a {
+  background: #fff;
+  color: @red;
+}
 
 /* Full-window overlays *********/
 body.noscroll {
@@ -142,8 +157,8 @@ body.noscroll {
 }
 
 #fill {
-  background: #444 url(/media/img/foundation/annualreport/2011/grain.png);
-  background: rgba(0,0,0,.9) url(/media/img/foundation/annualreport/2011/grain.png);
+  background: #444 url('/media/img/foundation/annualreport/2011/grain.png');
+  background: rgba(0,0,0,.9) url('/media/img/foundation/annualreport/2011/grain.png');
   width: 100%;
   height: 100%;
   position: fixed;
@@ -341,7 +356,7 @@ body.noscroll {
 .mob-firefoxos {
   .pull {
     .open-sans-light;
-    background: #004980 url(/media/img/foundation/annualreport/2011/mob-firefoxos.jpg) center top no-repeat;
+    background: #004980 url('/media/img/foundation/annualreport/2011/mob-firefoxos.jpg') center top no-repeat;
     background-size: cover;
     padding: 100px 90px;
     .font-size(38px);
@@ -369,7 +384,7 @@ body.noscroll {
     font-style: normal;
     color: #f7f4ec;
     text-shadow: none;
-    background: #85c0da url(/media/img/foundation/annualreport/2011/mob-fxandroid.jpg) no-repeat;
+    background: #85c0da url('/media/img/foundation/annualreport/2011/mob-fxandroid.jpg') no-repeat;
   }
   .overlay {
     width: 780px;
@@ -389,7 +404,7 @@ body.noscroll {
 
 /* Firefox Desktop ***/
 .mob-fxdesktop .pull {
-  background: #424d52 url(/media/img/foundation/annualreport/2011/mob-fxdesktop.jpg) center top no-repeat;
+  background: #424d52 url('/media/img/foundation/annualreport/2011/mob-fxdesktop.jpg') center top no-repeat;
   min-height: 300px;
   padding: 120px 100px 0;
   text-align: center;
@@ -407,7 +422,7 @@ body.noscroll {
 
 /* Webmaker ***/
 .mob-webmaker .pull {
-  background: #71150d url(/media/img/foundation/annualreport/2011/mob-webmaker.jpg) center center no-repeat;
+  background: #71150d url('/media/img/foundation/annualreport/2011/mob-webmaker.jpg') center center no-repeat;
   min-height: 260px;
   padding: 100px 120px 0;
   text-align: center;
@@ -428,7 +443,7 @@ body.noscroll {
 }
 
 .mob-standards .pull {
-  background: #a63700 url(/media/img/foundation/annualreport/2011/mob-standards.jpg) center top no-repeat;
+  background: #a63700 url('/media/img/foundation/annualreport/2011/mob-standards.jpg') center top no-repeat;
   min-height: 184px;
   padding: 30px 40px 0;
   margin: 0;
@@ -447,7 +462,7 @@ body.noscroll {
 
 /* Action *********/
 .act-intro .pull {
-  background: #242e39 url(/media/img/foundation/annualreport/2011/act-intro.jpg) center top no-repeat;
+  background: #242e39 url('/media/img/foundation/annualreport/2011/act-intro.jpg') center top no-repeat;
   min-height: 360px;
   padding: 130px 40px 0;
   text-align: center;
@@ -467,7 +482,7 @@ body.noscroll {
 .act-donottrack {
   margin-top: -3em;
   img {
-    background: #fff url(/media/img/foundation/annualreport/2011/act-donottrack.jpg) center top no-repeat;
+    background: #fff url('/media/img/foundation/annualreport/2011/act-donottrack.jpg') center top no-repeat;
     display: block;
     padding: 130px 58px 96px;
   }
@@ -504,7 +519,7 @@ body.noscroll {
 .act-flicks img {
   display: block;
   padding: 50px 90px 36px;
-  background: rgb(80,13,20) url(/media/img/foundation/annualreport/2011/bg-curtains.jpg) center top repeat-x;
+  background: rgb(80,13,20) url('/media/img/foundation/annualreport/2011/bg-curtains.jpg') center top repeat-x;
 }
 
 .js .act-flicks .overlay {
@@ -613,7 +628,7 @@ body.noscroll {
       display: block;
       width: 100%;
       height: 100%;
-      background: url(/media/img/foundation/annualreport/2011/btn-play.png) center center no-repeat;
+      background: url('/media/img/foundation/annualreport/2011/btn-play.png') center center no-repeat;
       position: absolute;
       top: 0;
       left: 0;
@@ -694,7 +709,7 @@ body.noscroll {
   padding: 0;
   text-indent: -999em;
   overflow: hidden;
-  background: transparent url(/media/img/foundation/annualreport/2011/control-arrows.png) no-repeat;
+  background: transparent url('/media/img/foundation/annualreport/2011/control-arrows.png') no-repeat;
   width: 35px;
   height: 96px;
   position: absolute;
@@ -753,7 +768,7 @@ body.noscroll {
     padding-top: 40px;
     height: 74px;
     color: @red;
-    background: url(/media/img/foundation/annualreport/2011/bg-faq.png) center center no-repeat;
+    background: url('/media/img/foundation/annualreport/2011/bg-faq.png') center center no-repeat;
     &:hover,
     &:focus,
     &:active {
