--- a/media/css/foundation/annual2012.less
+++ b/media/css/foundation/annual2012.less
@@ -9,7 +9,7 @@
 }
 
 body {
-	background: url(/media/img/foundation/annualreport/2012/bg-grain.png) left top repeat;
+	background: url('/media/img/foundation/annualreport/2012/bg-grain.png') left top repeat;
 }
 
 #outer-wrapper {
@@ -39,7 +39,7 @@ body {
 	padding-right: 560px;
 	height: 562px;
 	color: #fff;
-	background: url(/media/img/foundation/annualreport/2012/bg-banner-desktop.jpg) center bottom no-repeat;
+	background: url('/media/img/foundation/annualreport/2012/bg-banner-desktop.jpg') center bottom no-repeat;
 
 	h1 {
 		width: 141px;
@@ -76,7 +76,7 @@ body {
 			left: 0;
 			width: 60px;
 			height: 60px;
-			background: url(/media/img/foundation/annualreport/2012/quotes.png) left top no-repeat;
+			background: url('/media/img/foundation/annualreport/2012/quotes.png') left top no-repeat;
 			background-size: contain;
 			content: '';
 		}
@@ -178,7 +178,7 @@ html[lang|="en"] .banner blockquote {
 			padding: 0 70px @baseLine @baseLine;
 			vertical-align: bottom;
 			.transition(background-color 0.2s ease);
-			background-image: url(/media/img/foundation/annualreport/2012/icon-play.png);
+			background-image: url('/media/img/foundation/annualreport/2012/icon-play.png');
 			background-position: 320px 158px;
 			background-repeat: no-repeat;
 			// hide descriptive link text
@@ -195,28 +195,28 @@ html[lang|="en"] .banner blockquote {
 		display: none;
 	}
 	.baker {
-		background-image: url(/media/img/foundation/annualreport/2012/bg-baker.jpg);
+		background-image: url('/media/img/foundation/annualreport/2012/bg-baker.jpg');
 	}
 	.sullivan {
-		background-image: url(/media/img/foundation/annualreport/2012/bg-sullivan.jpg);
+		background-image: url('/media/img/foundation/annualreport/2012/bg-sullivan.jpg');
 	}
 	.anderson {
-		background-image: url(/media/img/foundation/annualreport/2012/bg-anderson.jpg);
+		background-image: url('/media/img/foundation/annualreport/2012/bg-anderson.jpg');
 	}
 	.surman {
-		background-image: url(/media/img/foundation/annualreport/2012/bg-surman.jpg);
+		background-image: url('/media/img/foundation/annualreport/2012/bg-surman.jpg');
 	}
 	.nightingale {
-		background-image: url(/media/img/foundation/annualreport/2012/bg-nightingale.jpg);
+		background-image: url('/media/img/foundation/annualreport/2012/bg-nightingale.jpg');
 	}
 	.eich {
-		background-image: url(/media/img/foundation/annualreport/2012/bg-eich.jpg);
+		background-image: url('/media/img/foundation/annualreport/2012/bg-eich.jp'g);
 	}
 	.journey {
-		background-image: url(/media/img/foundation/annualreport/2012/bg-the-journey.jpg);
+		background-image: url('/media/img/foundation/annualreport/2012/bg-the-journey.jpg');
 	}
 	.mozillian {
-		background-image: url(/media/img/foundation/annualreport/2012/bg-a-mozillian.jpg);
+		background-image: url('/media/img/foundation/annualreport/2012/bg-a-mozillian.jpg');
 	}
 }
 
@@ -285,7 +285,7 @@ html[lang|="en"] {
 		.image-replaced();
 		display: block;
 		border-radius: 0;
-		background: url(/media/img/foundation/annualreport/2012/state-of-mozilla.png) left top no-repeat;
+		background: url('/media/img/foundation/annualreport/2012/state-of-mozilla.png') left top no-repeat;
 		background-size: 100% 100%;
 		text-indent: 200%;
 	}
@@ -342,12 +342,12 @@ html[dir="rtl"] {
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 	html[lang|="en"] {
 		.banner h1 span {
-			background-image: url(/media/img/foundation/annualreport/2012/state-of-mozilla-high-res.png);
+			background-image: url('/media/img/foundation/annualreport/2012/state-of-mozilla-high-res.png');
 		}
 	}
 
     .videos li a {
-    	background-image: url(/media/img/foundation/annualreport/2012/icon-play-high-res.png);
+    	background-image: url('/media/img/foundation/annualreport/2012/icon-play-high-res.png');
     	background-size: 39px 39px;
     }
 }
@@ -388,7 +388,7 @@ html[dir="rtl"] {
 	.banner {
 		height: 410px;
 		padding-right: 310px;
-		background: url(/media/img/foundation/annualreport/2012/bg-banner-tablet.jpg) center bottom no-repeat;
+		background: url('/media/img/foundation/annualreport/2012/bg-banner-tablet.jpg') center bottom no-repeat;
 		h1 {
 			margin-bottom: 40px;
 		}
@@ -478,7 +478,7 @@ html[dir="rtl"] {
 	.banner {
 		height: auto;
 		margin-top: -64px;
-		background: url(/media/img/foundation/annualreport/2012/bg-banner-mobile.jpg) right top no-repeat;
+		background: url('/media/img/foundation/annualreport/2012/bg-banner-mobile.jpg') right top no-repeat;
 		h1 {
 			margin-bottom: 60px;
 		}
@@ -568,7 +568,7 @@ html[dir="rtl"] {
 	}
 
 	.banner {
-		background: url(/media/img/foundation/annualreport/2012/bg-banner-mobile.jpg) -130px top no-repeat;
+		background: url('/media/img/foundation/annualreport/2012/bg-banner-mobile.jpg') -130px top no-repeat;
 		h1 {
 			margin-bottom: 130px;
 			width: 100px;
