--- a/media/css/foundation/annual2013.less
+++ b/media/css/foundation/annual2013.less
@@ -9,7 +9,7 @@
 }
 
 body {
-    background: url(/media/img/foundation/annualreport/2013/bg-grain.png) left top repeat;
+    background: url('/media/img/foundation/annualreport/2013/bg-grain.png') left top repeat;
 }
 
 #outer-wrapper {
@@ -39,7 +39,7 @@ body {
     padding-right: 560px;
     height: 562px;
     color: #fff;
-    background: url(/media/img/foundation/annualreport/2013/bg-banner-desktop.jpg) center bottom no-repeat;
+    background: url('/media/img/foundation/annualreport/2013/bg-banner-desktop.jpg') center bottom no-repeat;
 
     h1 {
         width: 141px;
@@ -143,7 +143,7 @@ body {
             padding: 0 70px @baseLine @baseLine;
             vertical-align: bottom;
             .transition(background-color 0.2s ease);
-            background-image: url(/media/img/foundation/annualreport/2013/icon-play.png);
+            background-image: url('/media/img/foundation/annualreport/2013/icon-play.png');
             background-position: 320px 158px;
             background-repeat: no-repeat;
             // hide descriptive link text
@@ -157,7 +157,7 @@ body {
     }
 
     .mozillian {
-        background-image: url(/media/img/foundation/annualreport/2013/bg-a-mozillian.jpg);
+        background-image: url('/media/img/foundation/annualreport/2013/bg-a-mozillian.jpg');
     }
 }
 
@@ -230,7 +230,7 @@ html[lang|="en"] {
         .image-replaced();
         display: block;
         border-radius: 0;
-        background: url(/media/img/foundation/annualreport/2013/state-of-mozilla.png) left top no-repeat;
+        background: url('/media/img/foundation/annualreport/2013/state-of-mozilla.png') left top no-repeat;
         background-size: 100% 100%;
         text-indent: 200%;
     }
@@ -273,12 +273,12 @@ html[dir="rtl"] {
     only screen and ( min-resolution: 144dpi) {
     html[lang|="en"] {
         .banner h1 span {
-            background-image: url(/media/img/foundation/annualreport/2013/state-of-mozilla-high-res.png);
+            background-image: url('/media/img/foundation/annualreport/2013/state-of-mozilla-high-res.png');
         }
     }
 
     .videos li a {
-        background-image: url(/media/img/foundation/annualreport/2013/icon-play-high-res.png);
+        background-image: url('/media/img/foundation/annualreport/2013/icon-play-high-res.png');
         background-size: 39px 39px;
     }
 }
@@ -319,7 +319,7 @@ html[dir="rtl"] {
     .banner {
         height: 410px;
         padding-right: 310px;
-        background: url(/media/img/foundation/annualreport/2013/bg-banner-tablet.jpg) center bottom no-repeat;
+        background: url('/media/img/foundation/annualreport/2013/bg-banner-tablet.jpg') center bottom no-repeat;
         h1 {
             margin-bottom: 40px;
         }
@@ -394,7 +394,7 @@ html[dir="rtl"] {
     .banner {
         height: auto;
         margin-top: -64px;
-        background: url(/media/img/foundation/annualreport/2013/bg-banner-mobile.jpg) right top no-repeat;
+        background: url('/media/img/foundation/annualreport/2013/bg-banner-mobile.jpg') right top no-repeat;
         h1 {
             margin-bottom: 60px;
         }
@@ -470,7 +470,7 @@ html[dir="rtl"] {
     }
 
     .banner {
-        background: url(/media/img/foundation/annualreport/2013/bg-banner-mobile.jpg) -130px top no-repeat;
+        background: url('/media/img/foundation/annualreport/2013/bg-banner-mobile.jpg') -130px top no-repeat;
         h1 {
             margin-bottom: 130px;
             width: 100px;
