--- a/media/css/foundation/annual2014.less
+++ b/media/css/foundation/annual2014.less
@@ -5,17 +5,17 @@
 @import "../sandstone/lib.less";
 
 .banner {
-    background-image: url(/media/img/foundation/annualreport/2014/bg-banner-desktop.jpg);
+    background-image: url('/media/img/foundation/annualreport/2014/bg-banner-desktop.jpg');
 }
 
 @media (max-width: @breakDesktop) {
     .banner {
-        background-image: url(/media/img/foundation/annualreport/2014/bg-banner-tablet.jpg);
+        background-image: url('/media/img/foundation/annualreport/2014/bg-banner-tablet.jpg');
     }
 }
 
 @media (max-width: @breakTablet) {
     .banner {
-        background: url(/media/img/foundation/annualreport/2014/bg-banner-mobile.jpg);
+        background: url('/media/img/foundation/annualreport/2014/bg-banner-mobile.jpg');
     }
 }
