--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -122,7 +122,7 @@
     }
     h2:not(:empty) + p:not(:empty){
         padding-bottom: 1em;
-        background: url(/media/img/mission/thin-stripe.png) center bottom repeat-x
+        background: url('/media/img/mission/thin-stripe.png') center bottom repeat-x;
     }
 }
 
@@ -139,7 +139,7 @@
     }
     h4 {
         .font-size(22px);
-        background: url(/media/img/mission/thin-stripe.png) center top repeat-x;
+        background: url('/media/img/mission/thin-stripe.png') center top repeat-x;
         padding-top: 1em;
         .trailing-arrow;
     }
