[bug 1332672]  [CSS linting] /foundation directory

--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -117,7 +117,7 @@
     }
     h2:not(:empty) + p:not(:empty){
         padding-bottom: 1em;
-        background: url(/media/img/mission/thin-stripe.png) center bottom repeat-x
+        background: url('/media/img/mission/thin-stripe.png') center bottom repeat-x;
     }
 }
 
@@ -134,7 +134,7 @@
     }
     h4 {
         .font-size(22px);
-        background: url(/media/img/mission/thin-stripe.png) center top repeat-x;
+        background: url('/media/img/mission/thin-stripe.png') center top repeat-x;
         padding-top: 1em;
         .trailing-arrow;
     }
