[bug 1332672] [CSS linting] /foundation directory
- Typo fixed

--- a/media/css/foundation/annual2012.less
+++ b/media/css/foundation/annual2012.less
@@ -210,7 +210,7 @@ html[lang|="en"] .banner blockquote {
 		background-image: url('/media/img/foundation/annualreport/2012/bg-nightingale.jpg');
 	}
 	.eich {
-		background-image: url('/media/img/foundation/annualreport/2012/bg-eich.jp'g);
+		background-image: url('/media/img/foundation/annualreport/2012/bg-eich.jpg');
 	}
 	.journey {
 		background-image: url('/media/img/foundation/annualreport/2012/bg-the-journey.jpg');
