[bug 1332650][CSS linting] MPL and namespace pages
- Fixed

--- a/media/css/mozorg/mpl-differences.scss
+++ b/media/css/mozorg/mpl-differences.scss
@@ -39,7 +39,7 @@ h1 {
 }
 
 #moveacross p:first-child {
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .subsection {
@@ -79,8 +79,8 @@ strong {
     font-size: 100%;
     font-variant: normal;
     font-weight: normal;
-    left: 0px;
-    margin: 0px 5px 5px 5px;
+    left: 0;
+    margin: 0 5px 5px 5px;
     padding: 5px;
     position: absolute;
     text-decoration: none;
