--- a/media/css/mozorg/mpl-1-1-annotated.scss
+++ b/media/css/mozorg/mpl-1-1-annotated.scss
@@ -25,7 +25,7 @@ h1 {
 }
 
 #moveacross p:first-child {
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .subsection {
@@ -53,8 +53,8 @@ a.mouseover {
     color: black;
     display: block;
     font-weight: normal;
-    left: 0px;
-    margin: 0px 5px 5px 5px;
+    left: 0;
+    margin: 0 5px 5px 5px;
     padding: 5px;
     position: absolute;
     text-decoration: none;
