[fix bug 1332665] Fix CSS linting errors for media/css/base/

--- a/media/css/base/menu.less
+++ b/media/css/base/menu.less
@@ -26,7 +26,7 @@
             outline: 0;
 
             &[aria-haspopup="true"] {
-                background-image: url(/media/img/sandstone/menu-point.png);
+                background-image: url("/media/img/sandstone/menu-point.png");
                 background-repeat: no-repeat;
                 background-position: center 2.75em;
             }
