--- a/media/css/base/mozilla-modal.less
+++ b/media/css/base/mozilla-modal.less
@@ -55,9 +55,9 @@ html.noscroll body {
                 .button {
                     background-color: transparent;
                     // png fallback for IE8
-                    background-image: url(/media/img/mozid/modal-close.png);
+                    background-image: url("/media/img/mozid/modal-close.png");
                     // svg for good browsers
-                    background-image: none, url(/media/img/mozid/modal-close.svg);
+                    background-image: none, url("/media/img/mozid/modal-close.svg");
                     background-position: center center;
                     background-repeat: no-repeat;
                     background-size: 22px 22px;
