--- a/media/css/base/mozilla-accordion.less
+++ b/media/css/base/mozilla-accordion.less
@@ -34,7 +34,7 @@
         margin-left: -30px;
         width: 16px;
         height: 1em;
-        background-image: url(data:image/ping;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAQAgMAAADbiZG6AAAACVBMVEUAc6pISEj///+X8T7aAAAAA3RSTlP//wDXyg1BAAAAH0lEQVR4AWNYtTJrFRis0AJTdBIIhQIGKMAQGCCHAQBHA49nS35W6gAAAABJRU5ErkJggg==);
+        background-image: url("data:image/ping;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAQAgMAAADbiZG6AAAACVBMVEUAc6pISEj///+X8T7aAAAAA3RSTlP//wDXyg1BAAAAH0lEQVR4AWNYtTJrFRis0AJTdBIIhQIGKMAQGCCHAQBHA49nS35W6gAAAABJRU5ErkJggg==");
         background-repeat: no-repeat;
         content: '';
       }
