--- a/media/css/base/mozilla-video-poster.less
+++ b/media/css/base/mozilla-video-poster.less
@@ -58,7 +58,7 @@
             width: 100px;
             height: 100px;
             margin: -50px 0 0 -50px;
-            background: url(/media/img/sandstone/video/play.png) top left no-repeat;
+            background: url("/media/img/sandstone/video/play.png") top left no-repeat;
             .transition(opacity .3s);
             opacity: 0.7;
             z-index: 2;
