--- a/media/css/base/send-to-device-micro.less
+++ b/media/css/base/send-to-device-micro.less
@@ -118,7 +118,7 @@
 
         &:-moz-ui-invalid:not(output):focus {
             border-color: #42A4E0;
-            box-shadow: 0px 0px 0px 2px rgba(73, 173, 227, 0.4);
+            box-shadow: 0 0 0 2px rgba(73, 173, 227, 0.4);
         }
     }
 
@@ -134,7 +134,7 @@
         &:active,
         &:focus,
         &:active {
-            background-color: lighten(#0c99d5, 5%)
+            background-color: lighten(#0c99d5, 5%);
         }
     }
 
