[fix bug 1332674] Fix CSS linting errors for /media/css/mozorg/ directory

--- a/media/css/mozorg/about-base.less
+++ b/media/css/mozorg/about-base.less
@@ -98,7 +98,7 @@
             margin-left: 0;
             margin-bottom: @baseLine;
             padding-bottom: 10px;
-            background: url(/media/img/mission/thin-stripe.png) center bottom repeat-x;
+            background: url('/media/img/mission/thin-stripe.png') center bottom repeat-x;
             min-height: @baseLine * 4;
         }
 
