--- a/media/css/mozorg/about-lean-data.less
+++ b/media/css/mozorg/about-lean-data.less
@@ -28,7 +28,7 @@
 main {
     background-color: #fff;
     margin: 0 auto;
-    padding: 0px 30px;
+    padding: 0 30px;
     width: 1000px;
 
     @media only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) {
