--- a/media/css/mozorg/contact-spaces-oldie.less
+++ b/media/css/mozorg/contact-spaces-oldie.less
@@ -29,16 +29,16 @@
 .nav-category {
 
     .current > a {
-        background-image: url(/media/img/contact/arrow-current.png);
+        background-image: url('/media/img/contact/arrow-current.png');
     }
 
     // down arrow
     .hasmenu > a {
-        background-image: url(/media/img/contact/arrow-down.png);
+        background-image: url('/media/img/contact/arrow-down.png');
     }
 
     // up arrow
     .hasmenu.open > a {
-        background-image: url(/media/img/contact/arrow-up.png);
+        background-image: url('/media/img/contact/arrow-up.png');
     }
 }
