--- a/media/css/mozorg/contact-spaces.less
+++ b/media/css/mozorg/contact-spaces.less
@@ -5,7 +5,7 @@
 @import "../sandstone/lib.less";
 
 @font-face {
-    font-family: 'FA-Icons-Contact';
+    font-family: FA-Icons-Contact;
     src: url('/media/fonts/icons-contact.woff2?20-12-2016') format('woff2'),
          url('/media/fonts/icons-contact.woff?20-12-2016') format('woff');
     font-weight: normal;
@@ -188,7 +188,7 @@
         }
 
         a {
-            background: url(/media/img/firefox/pager-tabs.png) 0 0 no-repeat;
+            background: url('/media/img/firefox/pager-tabs.png') 0 0 no-repeat;
             display: block;
             height: 40px;
             line-height: 40px;
@@ -417,7 +417,7 @@
 
             &:before {
                 color: #b50f10;
-                font: 105% 'FA-Icons-Contact';
+                font: 105% FA-Icons-Contact;
                 content: '\e800'; /* '' */
                 position: absolute;
                 left: 0;
@@ -439,7 +439,7 @@
 
                 &:before {
                     color: #b50f10;
-                    font: 105% 'FA-Icons-Contact';
+                    font: 105% FA-Icons-Contact;
                     position: absolute;
                     left: 0;
                     top: .125em;
@@ -556,7 +556,7 @@
 .js {
     #mv-sphere-video {
         .moz-video-button {
-            background-image: url(/media/img/contact/poster-sphere.jpg);
+            background-image: url('/media/img/contact/poster-sphere.jpg');
         }
     }
 }
