--- a/media/css/mozorg/contribute/friends.less
+++ b/media/css/mozorg/contribute/friends.less
@@ -10,12 +10,12 @@
 }
 
 #masthead {
-    background: #373737 url(/media/img/contribute/friends/hero-image-home.jpg) 50% 0 no-repeat;
+    background: #373737 url('/media/img/contribute/friends/hero-image-home.jpg') 50% 0 no-repeat;
     padding: 0;
     width: 100%;
 
     @media only screen and (max-width: @breakMobileLandscape) {
-        background-image: url(/media/img/contribute/friends/hero-image-home-mobile.jpg);
+        background-image: url('/media/img/contribute/friends/hero-image-home-mobile.jpg');
     }
 }
 
