--- a/media/css/mozorg/contribute/studentambassadors/landing.less
+++ b/media/css/mozorg/contribute/studentambassadors/landing.less
@@ -38,7 +38,7 @@
 #main-feature {
   padding: 450px 0 0;
   width: auto;
-  background: #FFF url(/media/img/contribute/studentambassadors/hero.jpg) no-repeat center top;
+  background: #FFF url('/media/img/contribute/studentambassadors/hero.jpg') no-repeat center top;
   background-size: 1400px 450px;
 
   .row {
@@ -70,8 +70,8 @@
   .callout {
     .span(4);
     padding: 25px 0;
-    background: url(/media/img/contribute/studentambassadors/separator.png) repeat-x top left,
-                url(/media/img/contribute/studentambassadors/separator.png) repeat-x bottom left;
+    background: url('/media/img/contribute/studentambassadors/separator.png') repeat-x top left,
+                url('/media/img/contribute/studentambassadors/separator.png') repeat-x bottom left;
 
     ul {
       margin: @baseLine / 2 0;
@@ -203,7 +203,7 @@
 
   #main-feature {
     padding-top: 200px;
-    background-image: url(/media/img/contribute/studentambassadors/hero-small.jpg);
+    background-image: url('/media/img/contribute/studentambassadors/hero-small.jpg');
     background-size: auto 200px;
 
     .row {
