--- a/media/css/mozorg/manifesto.less
+++ b/media/css/mozorg/manifesto.less
@@ -473,7 +473,7 @@
             margin: 6px 0 0 -16px;
             width: 11px;
             height: 11px;
-            background-image: url(/media/img/mozorg/about/manifesto/social/sprite.png);
+            background-image: url('/media/img/mozorg/about/manifesto/social/sprite.png');
             background-repeat: no-repeat;
             content: "";
         }
@@ -576,7 +576,7 @@
                 padding: 0;
                 width: 50px;
                 height: 50px;
-                background: url(/media/img/sandstone/modal-arrows.png) no-repeat;
+                background: url('/media/img/sandstone/modal-arrows.png') no-repeat;
                 opacity: .5;
                 text-indent: 100px; /* Hide the label */
                 white-space: nowrap;
@@ -814,7 +814,7 @@ html[dir="rtl"] {
 
             a:before {
                 float: right;
-                margin: 6px -16px 0px 0px;
+                margin: 6px -16px 0 0;
             }
         }
     }
