--- a/media/css/mozorg/mission.less
+++ b/media/css/mozorg/mission.less
@@ -109,7 +109,7 @@ ul.links {
         .span(3);
         list-style-type: none;
         padding-top: 25px;
-        background: url(/media/img/mission/thin-stripe.png) center top repeat-x;
+        background: url('/media/img/mission/thin-stripe.png') center top repeat-x;
     }
 
     h4 {
