--- a/media/css/mozorg/partnerships.less
+++ b/media/css/mozorg/partnerships.less
@@ -21,7 +21,7 @@
         }
     }
     #main-content {
-        background-image: url(/media/img/mozorg/partnerships/sidebar-bg.png);
+        background-image: url('/media/img/mozorg/partnerships/sidebar-bg.png');
         background-position: 100% 0;
         background-repeat: repeat-y;
     }
@@ -32,7 +32,7 @@
             margin-right: 40px;
             margin-bottom: @baseLine * 1.5;
             position: relative;
-            background: url(/media/img/mozorg/partnerships/divider.png) 50% 100% no-repeat;
+            background: url('/media/img/mozorg/partnerships/divider.png') 50% 100% no-repeat;
             padding-bottom: @baseLine * 1.5;
             p,
             ul,
@@ -83,7 +83,7 @@
     #sf-form input,
     #sf-form select,
     #sf-form textarea {
-        width: 200px
+        width: 200px;
     }
 
     #sf-form select {
