--- a/media/css/mozorg/projects/calendar.less
+++ b/media/css/mozorg/projects/calendar.less
@@ -45,7 +45,7 @@
         margin-bottom: @baseLine;
     }
     .calendar-table {
-        padding: 0px 20px;
+        padding: 0 20px;
     }
     ul.holiday-nav {
         text-align: center;
@@ -75,7 +75,7 @@
         overflow: visible;
         padding-right: 30px;
         span.title {
-            background: url(/media/img/sandstone/buttons/download-arrow-small.png) no-repeat scroll 10px 14px transparent;
+            background: url('/media/img/sandstone/buttons/download-arrow-small.png') no-repeat scroll 10px 14px transparent;
             display: block;
             .font-size(20px);
             font-style: italic;
