--- a/media/css/mozorg/contribute/contribute-base.less
+++ b/media/css/mozorg/contribute/contribute-base.less
@@ -433,15 +433,15 @@ textarea:focus {
     .section-title {
         margin-top: 1em;
     }
-    background-image: url(/media/img/contribute/bg-slide1-2000.jpg);
+    background-image: url('/media/img/contribute/bg-slide1-2000.jpg');
 }
 
 .slide-two {
-    background-image: url(/media/img/contribute/bg-slide2-2000.jpg);
+    background-image: url('/media/img/contribute/bg-slide2-2000.jpg');
 }
 
 .slide-three {
-    background-image: url(/media/img/contribute/bg-slide3-2000.jpg);
+    background-image: url('/media/img/contribute/bg-slide3-2000.jpg');
 }
 
 .cycle-pager {
@@ -667,20 +667,20 @@ textarea:focus {
     }
 
     .step1 {
-        background-image: url(/media/img/contribute/step1-select.png);
+        background-image: url('/media/img/contribute/step1-select.png');
     }
 
     .step2 {
-        background-image: url(/media/img/contribute/step2-notify-v2.png);
+        background-image: url('/media/img/contribute/step2-notify-v2.png');
     }
 
     .step3 {
-        background-image: url(/media/img/contribute/step3-profile.png);
+        background-image: url('/media/img/contribute/step3-profile.png');
     }
 }
 
 .next-steps .step1 {
-    background-image: url(/media/img/contribute/step1-select-done.png);
+    background-image: url('/media/img/contribute/step1-select-done.png');
     color: lighten(@textColorPrimary, 40%);
 
     &:after {
@@ -693,7 +693,7 @@ textarea:focus {
 /*-------------------------------------------------------------------------*/
 // Not ready?
 .landing-notready {
-    background: #3e2610 url(/media/img/contribute/bg-notready-2000.jpg) center -50px no-repeat;
+    background: #3e2610 url('/media/img/contribute/bg-notready-2000.jpg') center -50px no-repeat;
     .section-dark;
 
     .section-tagline {
@@ -760,15 +760,15 @@ textarea:focus {
 }
 
 .other-read:before {
-    content: '\f06e'
+    content: '\f06e';
 }
 
 .other-shop:before {
-    content: '\f07a'
+    content: '\f07a';
 }
 
 .other-twitter:before {
-    content: '\f099'
+    content: '\f099';
 }
 
 .other-facebook:before {
@@ -1064,7 +1064,7 @@ textarea:focus {
 // Mozillian @Stories
 .stories-intro {
     .section-dark;
-    background: #000 url(/media/img/contribute/bg-stories-2000.jpg) center top no-repeat;
+    background: #000 url('/media/img/contribute/bg-stories-2000.jpg') center top no-repeat;
     padding-bottom: 100px;
 }
 
@@ -1645,15 +1645,15 @@ textarea:focus {
         }
 
         .step1 {
-            background: url(/media/img/contribute/step1-select-sm.png) left center no-repeat;
+            background: url('/media/img/contribute/step1-select-sm.png') left center no-repeat;
         }
 
         .step2 {
-            background: url(/media/img/contribute/step2-notify-sm-v2.png) left center no-repeat;
+            background: url('/media/img/contribute/step2-notify-sm-v2.png') left center no-repeat;
         }
 
         .step3 {
-            background: url(/media/img/contribute/step3-profile-sm.png) 5px center no-repeat;
+            background: url('/media/img/contribute/step3-profile-sm.png') 5px center no-repeat;
         }
     }
 
@@ -1783,23 +1783,23 @@ textarea:focus {
 @media only screen and (max-width: 960px) {
 
     .slide-one {
-        background-image: url(/media/img/contribute/bg-slide1-1000.jpg);
+        background-image: url('/media/img/contribute/bg-slide1-1000.jpg');
     }
 
     .slide-two {
-        background-image: url(/media/img/contribute/bg-slide2-1000.jpg);
+        background-image: url('/media/img/contribute/bg-slide2-1000.jpg');
     }
 
     .slide-three {
-        background-image: url(/media/img/contribute/bg-slide3-1000.jpg);
+        background-image: url('/media/img/contribute/bg-slide3-1000.jpg');
     }
 
     .landing-notready {
-        background-image: url(/media/img/contribute/bg-notready-1000.jpg);
+        background-image: url('/media/img/contribute/bg-notready-1000.jpg');
     }
 
     .stories-intro {
-        background-image: url(/media/img/contribute/bg-stories-1000.jpg);
+        background-image: url('/media/img/contribute/bg-stories-1000.jpg');
     }
 
 }
@@ -1807,23 +1807,23 @@ textarea:focus {
 @media only screen and (max-width: 480px) {
 
     .slide-one {
-        background-image: url(/media/img/contribute/bg-slide1-600.jpg);
+        background-image: url('/media/img/contribute/bg-slide1-600.jpg');
     }
 
     .slide-two {
-        background-image: url(/media/img/contribute/bg-slide2-600.jpg);
+        background-image: url('/media/img/contribute/bg-slide2-600.jpg');
     }
 
     .slide-three {
-        background-image: url(/media/img/contribute/bg-slide3-600.jpg);
+        background-image: url('/media/img/contribute/bg-slide3-600.jpg');
     }
 
     .landing-notready {
-        background-image: url(/media/img/contribute/bg-notready-600.jpg);
+        background-image: url('/media/img/contribute/bg-notready-600.jpg');
     }
 
     .stories-intro {
-        background-image: url(/media/img/contribute/bg-stories-600.jpg);
+        background-image: url('/media/img/contribute/bg-stories-600.jpg');
     }
 
 }
